--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-jasmine": "~0.4.0",
+    "grunt-contrib-jasmine": "~0.4.0"
   }
 }
