--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "glift",
-  "version": "1.1.0",
-  "description": "Lightweight Frontend Go Client",
+  "version": "1.1.2",
+  "description": "Glift: The Lightweight Frontend Client for Go",
   "license": "MIT",
-  "repository": "kashomon/glift",
-  "bugs": { "url" : "http://github.com/Kashomon/glift/issues" },
+  "repository": "Kashomon/glift",
+  "bugs": {
+    "url": "http://github.com/Kashomon/glift/issues"
+  },
   "author": {
     "name": "Josh Hoak",
     "email": "jrhoak@gmail.com"
   },
   "engines": {
-    "node": ">=4.3.0"
+    "node": ">=4.0.0"
   },
   "scripts": {
     "test": "gulp"
@@ -18,12 +20,12 @@
   "keywords": [
     "glift",
     "go",
+    "igo",
     "baduk",
     "weiqi"
   ],
   "devDependencies": {
-    "gulp-qunit": "~0.2.1",
-    "gulp-util": "~2.2.14",
-    "gulp": "~3.5.1"
+    "gulp": "^3.9.1",
+    "gulp-qunit": "^1.4.0"
   }
 }
