Add a min-height/min-width option and some docs.
fixes: https://github.com/Kashomon/glift/issues/138

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ src/htmltests_gen/*
 .DS_STORE
 *.swp
 *.swo
-README.md.html
 *.sublime-project
 *.sublime-workspace
 node_modules
+
+# For testing Markdown
+README.md.html 
