--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glift",
+  "name": "glift-ui",
   "version": "1.1.2",
   "description": "Glift: The Lightweight Frontend Client for Go",
   "license": "MIT",
