Update glift-core, fix some types, and fix triangle rendering.

--- a/deps/glift-core/BUILD
+++ b/deps/glift-core/BUILD
@@ -1,11 +1,15 @@
-load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")
-
-
-# closure_js_library(name, srcs, data, deps, exports, suppress, convention,
-                   # no_closure_library)
+load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library", "closure_js_binary")
 
 closure_js_library(
-  name = "glift_root",
-  srcs = [ "glift.js" ],
+    name = "glift_root",
+    srcs = ["glift.js"],
+    visibility = ["//visibility:public"],
 )
 
+closure_js_binary(
+    name = "glift-bin",
+    deps = [
+        ":glift_root",
+        "//src/util",
+    ],
+)
