--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glift-ui",
-  "version": "1.1.2",
+  "version": "1.2.0-alpha",
   "description": "Glift: The Lightweight Frontend Client for Go",
   "license": "MIT",
   "repository": "Kashomon/glift",
