--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "email": "jrhoak@gmail.com"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=8.9.3"
   },
   "scripts": {
     "test": "gulp"
@@ -25,13 +25,13 @@
     "weiqi"
   ],
   "devDependencies": {
-    "glob": "^7.0.3",
+    "glob": "^7.1.1",
     "gulp": "^3.9.1",
-    "gulp-closure-compiler": "^0.4.0",
+    "gulp-chmod": "^2.0.0",
     "gulp-concat": "^2.6.0",
-    "gulp-qunit": "^1.4.0",
+    "gulp-qunit": "^1.5.0",
     "gulp-size": "^2.1.0",
-    "gulp-util": "^3.0.7",
-    "through2": "^2.0.1"
+    "through2": "^2.0.1",
+    "google-closure-compiler": "^20170910.0.0"
   }
 }
