--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "weiqi"
   ],
   "devDependencies": {
-    "glob": "^7.0.3",
-    "gulp": "^3.9.1",
-    "gulp-closure-compiler": "^0.4.0",
+    "glob": "^7.1.1",
+    "google-closure-compiler": "^20170910.0.0",
+    "gulp": "^4.0.0",
+    "gulp-chmod": "^2.0.0",
     "gulp-concat": "^2.6.0",
-    "gulp-qunit": "^1.4.0",
+    "gulp-qunit": "^1.5.0",
     "gulp-size": "^2.1.0",
-    "gulp-util": "^3.0.7",
     "through2": "^2.0.1"
   }
 }
